pre-processors, renderers and compilers work (interface subject to change)

--- a/demo/config.json
+++ b/demo/config.json
@@ -2,62 +2,68 @@
   "name": "demo",
   "version": "1.0",
   "requirements": {
-	"bootstrap": ">2.0"
+    "bootstrap": ">2.0"
   },
   "pip_requirements": [
   ],
   "external_requirements": [
   ],
   "conflicts_with": {
-	"angular": "==*"
+    "angular": "==*"
   },
   "config": "code.config.demo_args",
-  "pre_processor": [
-	"code.preproc.demo_preproc"
+  "pre_processors": [
+    "code.preproc.demo_preproc"
   ],
   "parser": null,
-  "linkers": [
-	"code.compile.demo_link"
-  ],
   "tags": {
-	"c": "code.tags.C"
+    "c": "code.tags.C"
   },
+  "compilers": [
+    "code.compile.demo_compile"
+  ],
+  "linkers": [
+    "code.compile.demo_link"
+  ],
   "substitutions": "code/subs.json",
-  "post_process": [],
+  "post_processors": [],
   "renderer": null,
   "template": "template.html",
   "static": [
-	"static/*",
-	"*.css",
-	"*.js",
-	"*.html"
+    "static/*",
+    "*.css",
+    "*.js",
+    "*.html"
   ],
   "styles": [
-	"style.css",
-	"//mycdn.rich/demo/coollook.css"
+    "style.css",
+    "//mycdn.rich/demo/coollook.css"
   ],
   "scripts": [
-	"script.js",
+    "script.js",
     {
-   	  "local_path": "tjielp/*.js",
-      "copy": ["tjielp"]
-   	},
-	{
-	  "remote_path": "http://server.ext/tjielp/tweaks.js",
+      "local_path": "tjielp/*.js",
+      "allow_minify": false
+    },
+    {
+      "remote_path": "http://server.ext/tjielp/tweaks.js",
+      "tag_type": "text/x-mathjax-config",
       "allow_make_offline": false
-	},
-	{
-	  "local_path": "bla/hack.js",
-	  "copy": ["bla", "utils"],
-	  "remote_path": "https://server.ext/bla/hack.js"
-	},
-	{
-	  "remote_path": "https://server.ext/floep/stuff.js",
-	  "allow_make_offline": true,
-	  "download_archive": "https://otherserver.ext/floep/stuff-v1.zip",
-	  "copy": ["stuff-v1/dist"],
-	  "downloaded_path": "stuff-v1/dist/floep/stuff.js"
-	}
+    },
+    {
+      "local_path": "bla/hack.js",
+      "copy_map": {
+        "bla": "bla",
+        "": "bla/hack.min.jss"
+      },
+      "allow_minify": true,  // this is the default
+      "remote_path": "https://server.ext/bla/hack.js"
+    },
+    {
+      "download_archive": "https://otherserver.ext/floep/stuff-v1.zip",
+      "downloaded_path": "stuff-v1/dist/floep/stuff.js",
+      "allow_make_offline": true
+    }
   ],
   "readme": "readme.rst",
   "credits": "credits.txt",
